new Product UI + add MasterVariant class and master association

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,14 +2,17 @@ en:
   catalog: "Catalog"
   new_category: "New Category"
   add_category: "Add Category"
+  edit_category: "Edit Category"
   update_category: "Update Category"
   new_product: "New Product"
   add_product: "Add Product"
+  edit_product: "Edit Product"
   update_product: "Update Product"
   create_property: "Create Property"
   create_option_type: "Create Option Type"
   new_variant: "New Variant"
   add_variant: "Add Variant"
+  edit_variant: "Edit Variant"
   update_variant: "Update Variant"
   add_option_value: "Add Option Value"
   type_group_name_for_options_placeholder: "Type group/tag name for grouping option types..."
