--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,14 +2,17 @@ ru:
   catalog: "Каталог"
   new_category: "Новая Категория"
   add_category: "Добавить категорию"
+  edit_category: "Редактирование категории"
   update_category: "Обновить категорию"
   new_product: "Новый Продукт"
   add_product: "Добавить продукт"
+  edit_product: "Редактирование продукта"
   update_product: "Обновить продукт"
   create_property: "Создать свойство"
   create_option_type: "Создать товарную опцию"
   new_variant: "Новый Вариант"
   add_variant: "Добавить вариант"
+  edit_variant: "Редактирование варианта"
   update_variant: "Обновить вариант"
   add_option_value: "Добавить значение товарное опции"
   type_group_name_for_options_placeholder: "Введите название группы для группировки товарных опций..."
