add blank slate screens

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,10 +1,12 @@
 en:
   catalog: "Catalog"
   new_category: "New Category"
+  create_first_category: "Create first Category"
   add_category: "Add Category"
   edit_category: "Edit Category"
   update_category: "Update Category"
   new_product: "New Product"
+  create_first_product: "Create first product"
   add_product: "Add Product"
   edit_product: "Edit Product"
   update_product: "Update Product"
@@ -19,6 +21,8 @@ en:
   type_group_name_for_properties_placeholder: "Type group/tag name for grouping properties..."
   or_select_from_list_placeholder: "... or select from list"
   select_option_type_from_list_placeholder: "Select option type from list"
+  categories_description: "Categories are groups of similar products like 'Ties', 'Mugs' and etc."
+  products_description: "Each Product has Properties and also may be represented with several Variants depending on Option Types values"
   liquor_help:
     variables:
       categories:
